# oxifed

./: .gitignore  Cargo.toml  Dockerfile  README.md  blogd.Dockerfile  docker-compose.yml  domainservd.Dockerfile
.cargo/: config.toml
.github/workflows/: ci.yml  images.yml
charts/domainservd/: Chart.yaml  values.yaml
charts/domainservd/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
charts/publisherd/: Chart.yaml  values.yaml
charts/publisherd/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml
client/: Cargo.toml
crates/activitypub/: Cargo.toml
crates/activitypub/src/: activities.rs  collection.rs  lib.rs
crates/actwkd/: Cargo.toml
crates/blobstord/: Cargo.toml
crates/blogd/: Cargo.toml
crates/blogd/src/: lib.rs  mutation.rs  query.rs
crates/bloguid/: Cargo.toml
crates/domainservd/: .gitignore  Cargo.toml  Dockerfile
crates/domainservd/sample_data/: follow_toasterson.json
crates/domainservd/src/: main.rs
crates/fedi/: Cargo.toml
crates/fedi/src/: main.rs
crates/identd/: .gitignore  Cargo.toml  Dockerfile  README.md
crates/identd/src/: lib.rs  main.rs  migration.rs  realm_migration.rs  user.rs
crates/identd/src/migration/: m20230704_000001_create_user_table.rs
crates/identd/src/realm/: auth_request.rs  client.rs  mod.rs  prelude.rs  realm.rs
crates/identd/src/user/: user.rs
crates/identd/src/user_migration/: m20230704_000001_create_user_table.rs
crates/identd/tests/: auth_flow.rs
crates/objstord/: Cargo.toml
crates/objwkd/: Cargo.toml
crates/oxiblog/: Cargo.toml
crates/oxiblog/src/: couchdb.rs  lib.rs  main.rs
crates/oxiblog/tests/: create_simple.rs
crates/oxifeed/: Cargo.toml
crates/oxilib/: Cargo.toml
crates/oxilib/src/: lib.rs
crates/persond/: Cargo.toml
crates/publisherd/: Cargo.toml
crates/publisherd/src/: lib.rs  main.rs
crates/realmadm/: Cargo.toml
crates/realmadm/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  auth.md  intro.md
domain_connector/: Cargo.toml
domain_connector/src/: lib.rs  main.rs
domain_connector/src/activities/: create_post.rs
domain_connector/src/objects/: article.rs  mod.rs  person.rs  post.rs
prisma/: schema.prisma
prisma/migrations/20240120110003_init/: migration.sql
prisma/migrations/20240129153419_init/: migration.sql
server/: Cargo.toml
server/src/: lib.rs  main.rs
src/: actor.rs  article.rs  lib.rs  prisma.rs
src/activitypub/: activities.rs  collection.rs  mod.rs
src/domainservd/: actors.rs  collections.rs  inbox.rs  mod.rs  webfinger.rs
src/webfinger/: mod.rs
xtask/: Cargo.toml
xtask/src/: identd.rs  main.rs
