[package]
name = "oxifed"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*",
  "xtask"
]

[dependencies]
activitypub_federation.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
ed25519-dalek.workspace = true
gray_matter.workspace = true
miette.workspace = true
mongodb.workspace = true
prisma-client-rust.workspace = true
prisma-client-rust-cli.workspace = true
pulldown-cmark.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
sha3.workspace = true
slugify.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webfinger.workspace = true
async-graphql.workspace = true
lapin.workspace = true
deadpool-lapin.workspace = true
deadpool.workspace = true

[workspace.dependencies]
activitypub_federation = { version = "0.5.0", default-features = false }
axum = "0.7.3"
axum-extra = "0.9.1"
base64 = "0.21.7"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.13", features = ["derive"] }
config = "0.13.4"
ed25519-dalek = { version = "2.1.0", features = ["pem", "signature", "digest", "rand_core"] }
gray_matter = "0.2.6"
miette = { version = "5.10.0", features = ["fancy"] }
mongodb = { version = "2.8.0", features = ["tokio-runtime", "tracing"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
pulldown-cmark = "0.9.3"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_with = "3.4.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
slugify = "0.1.0"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json", "tracing", "env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
webfinger = "0.5.1"
async-graphql = "7.0.1"
lapin = { version = "2.3.1", features = ["serde_json"] }
deadpool-lapin = { version = "0.11.0", features = ["serde"] }
deadpool = { version = "0.10.0", features = ["serde"] }

oxifed = { version = "*", path = "."}
