[package]
name = "oxifed_domain_connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation = { version = "0.4.0", features = ["axum"], default-features = false }
async-trait = "0.1.68"
axum = "0.6.12"
axum-macros = "0.3.7"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.14", features = ["derive", "env"] }
config = "0.13.3"
enum_delegate = "0.2.0"
lapin = "2.2.1"
miette = { version = "5.6.0", features = ["fancy"] }
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
