[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo"] }
clap-cargo = "0.10.0"
identd = { version = "0.1.0-dev", path = "../crates/identd" }
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["json", "serde", "serde_json"] }
