[package]
name = "actwkd"
description = "Worker for received activities"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true


[dependencies]
miette = { workspace = true, features = ["fancy"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
config.workspace = true
lapin.workspace = true
deadpool-lapin.workspace = true
minio.workspace = true
oxilib.workspace = true
futures.workspace = true
url.workspace = true
biscuit-auth.workspace = true
activitypub = {version ="0.1.0-dev", path = "../activitypub"}
reqwest.workspace = true
chrono.workspace = true
