[package]
name = "blogd"
version.workspace = true
edition.workspace = true

[dependencies]
oxifed.workspace = true

activitypub_federation.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
ed25519-dalek.workspace = true
gray_matter.workspace = true
miette.workspace = true
mongodb.workspace = true
prisma-client-rust.workspace = true
prisma-client-rust-cli.workspace = true
pulldown-cmark.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
sha3.workspace = true
slugify.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
webfinger.workspace = true
async-graphql.workspace = true
async-graphql-axum = "7.0.1"
lapin.workspace = true
deadpool-lapin.workspace = true
deadpool.workspace = true

