[package]
name = "domainservd"
description = "Endpoint service to host all the endpoints for one domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
