[package]
name = "identd"
description = "OpenID Connect Identity Provider mainly for this project but with flexible features"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
axum-macros.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
lapin.workspace = true
miette.workspace = true
openidconnect = { version = "3.2.0", features = ["accept-rfc3339-timestamps", "accept-string-booleans"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
tokio.workspace = true
tower.workspace = true
reqwest.workspace = true
tower-http.workspace = true
rsa = "0.9.2"
rand = "0.8.5"
tera = "1"
bcrypt = "0.14.0"
sea-orm-migration = "0.11.3"
sea-orm = { version = "0.11.3", features = ["sqlx-sqlite", "sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls", "macros"] }
jwt-simple = "0.11.5"
sha2 = "0.10.7"
base64 = "0.21.2"

[dev-dependencies]
testdir = {version="0.7.3"}
