[package]
name = "oxiblog"
description = "Oxifed Blogging software to publish posts to Activitypub and act as CMS for static site generators"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
axum.workspace = true
axum-macros.workspace = true
chrono.workspace = true
clap.workspace = true
config.workspace = true
hyper.workspace = true
lapin.workspace = true
miette.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
oxilib.workspace = true
biscuit-auth.workspace = true
