[package]
name = "oxilib"
description = "Library of internal data structures aused by many daemons and apps"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
miette.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
lapin.workspace = true
deadpool-lapin.workspace = true
chrono.workspace = true
url.workspace = true
uuid.workspace = true
biscuit-auth.workspace = true
