[package]
name = "persond"
description = "Store and handle interactions for the person object; Only the basic things all applications need"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true

[dependencies]
