[package]
name = "realmadm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
lapin.workspace = true
miette = { workspace = true, features = ["fancy"] }
rand = "0.8.5"
rsa = "0.9.2"
