[package]
name = "realmadm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-global-executor = "2.3.1"
clap = { workspace = true, features = ["derive"] }
config.workspace = true
futures-lite = "1.13.0"
identd = { version = "0.1.0-dev", path = "../identd" }
lapin.workspace = true
miette = { workspace = true, features = ["fancy"] }
rand = "0.8.5"
rsa = "0.9.2"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
